--- a/Lab04.ipynb
+++ b/Lab04.ipynb
@@ -35,6 +35,15 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "sccd"
+      ],
+      "metadata": {
+        "id": "4xC3WirbDR8k"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "Tnif-HLUMkMS"
       },
@@ -51,16 +60,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "go-fdvLYNNoB",
-        "outputId": "40f932a6-75f6-4b3e-939d-7cff8477cedc"
+        "outputId": "0ed9e136-5e04-414a-def4-228d4043d782"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Collecting mrjob\n",
             "  Downloading mrjob-0.7.4-py2.py3-none-any.whl (439 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m439.6/439.6 kB\u001b[0m \u001b[31m6.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/439.6 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[90m╺\u001b[0m\u001b[90m━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m225.3/439.6 kB\u001b[0m \u001b[31m6.5 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m439.6/439.6 kB\u001b[0m \u001b[31m7.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: PyYAML>=3.10 in /usr/local/lib/python3.10/dist-packages (from mrjob) (6.0.1)\n",
             "Installing collected packages: mrjob\n",
             "Successfully installed mrjob-0.7.4\n"
@@ -90,12 +99,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dSCuxNYCLhGr",
-        "outputId": "e661a62a-c303-43a2-9c41-4795082b2f42"
+        "outputId": "4507c43d-fa55-4687-db23-9650e51f30c1"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Writing wordcount.py\n"
           ]
@@ -118,12 +127,12 @@
         "\n",
         "    # Define a reducer method within the class\n",
         "    def reducer(self, word, counts):\n",
-        "        # TODO: fill the reducer code"
+        "        yield (word, sum(counts))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "id": "gcap59-NUSbk"
       },
@@ -143,73 +152,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "cyBrRM6JL1CP",
-        "outputId": "cc16a51b-80d4-47fe-93c5-7d973f8e299c"
+        "outputId": "54685822-c5cc-4585-f8f4-8f2e13058d03"
       },
       "outputs": [
         {
-          "name": "stderr",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
             "WARNING:mrjob.conf:No configs specified for inline runner\n"
           ]
         },
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "seeks 1\n",
-            "services. 1\n",
-            "sessions, 1\n",
-            "several 1\n",
-            "social 3\n",
-            "statistics, 1\n",
-            "stream 1\n",
-            "students 1\n",
-            "systems, 1\n",
-            "the 3\n",
-            "theoretical 1\n",
-            "theory 1\n",
-            "these 1\n",
-            "this 1\n",
-            "this, 1\n",
-            "uses 1\n",
-            "weekly 1\n",
-            "where 1\n",
-            "will 3\n",
-            "with 2\n",
-            "work 1\n",
-            "world 1\n",
-            "cloud 1\n",
-            "clustering 1\n",
-            "combination 1\n",
-            "community 1\n",
-            "computing, 1\n",
-            "course 3\n",
-            "coverage 1\n",
-            "current 1\n",
-            "data 1\n",
-            "datasets 1\n",
-            "dedicated 1\n",
-            "detection, 1\n",
-            "dimensionality 1\n",
-            "e-commerce, 1\n",
-            "etc. 1\n",
-            "explored. 1\n",
-            "fields, 1\n",
-            "for 1\n",
-            "foundational 1\n",
-            "from 1\n",
-            "good 1\n",
-            "graph 1\n",
-            "in 2\n",
-            "information 1\n",
-            "infrastructure 1\n",
             "inspired 1\n",
             "internet 1\n",
             "is 1\n",
@@ -258,7 +220,54 @@
             "be 1\n",
             "between 1\n",
             "but 1\n",
-            "by 1\n"
+            "by 1\n",
+            "cloud 1\n",
+            "clustering 1\n",
+            "combination 1\n",
+            "community 1\n",
+            "computing, 1\n",
+            "course 3\n",
+            "coverage 1\n",
+            "current 1\n",
+            "data 1\n",
+            "datasets 1\n",
+            "dedicated 1\n",
+            "detection, 1\n",
+            "dimensionality 1\n",
+            "e-commerce, 1\n",
+            "etc. 1\n",
+            "explored. 1\n",
+            "fields, 1\n",
+            "for 1\n",
+            "foundational 1\n",
+            "from 1\n",
+            "good 1\n",
+            "graph 1\n",
+            "in 2\n",
+            "information 1\n",
+            "infrastructure 1\n",
+            "seeks 1\n",
+            "services. 1\n",
+            "sessions, 1\n",
+            "several 1\n",
+            "social 3\n",
+            "statistics, 1\n",
+            "stream 1\n",
+            "students 1\n",
+            "systems, 1\n",
+            "the 3\n",
+            "theoretical 1\n",
+            "theory 1\n",
+            "these 1\n",
+            "this 1\n",
+            "this, 1\n",
+            "uses 1\n",
+            "weekly 1\n",
+            "where 1\n",
+            "will 3\n",
+            "with 2\n",
+            "work 1\n",
+            "world 1\n"
           ]
         }
       ],
@@ -266,8 +275,8 @@
         "import wordcount\n",
         "\n",
         "# uncomment the following two lines when wanting to reload the python file, or you can restart the session\n",
-        "# import importlib\n",
-        "# importlib.reload(wordcount)\n",
+        "import importlib\n",
+        "importlib.reload(wordcount)\n",
         "\n",
         "# Create an instance of the MRWordCount class, specifying the input file 'wordcount.txt'\n",
         "mr_job = wordcount.MRWordCount(args=['wordcount.txt'])\n",
@@ -291,18 +300,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "A0Qdt_Qtbf_z",
-        "outputId": "ec78a319-c8dc-41d8-f969-cb8298fc74c3"
+        "outputId": "a6c91d56-5e35-4c77-9a78-1e0ce621f305"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Writing palindrome.py\n"
           ]
@@ -313,48 +322,55 @@
         "\n",
         "from mrjob.job import MRJob\n",
         "\n",
+        "# import importlib\n",
+        "# importlib.reload(palindrome)\n",
+        "\n",
+        "\n",
+        "\n",
         "class MRPalindrome(MRJob):\n",
         "\n",
         "    def mapper(self, _, word):\n",
-        "      # TODO: fill the mapper code\n",
-        "\n",
+        "        # Check if the word is a palindrome\n",
+        "        if word == word[::-1]:\n",
+        "            yield (word, 1)\n",
         "\n",
         "    def reducer(self, word, counts):\n",
-        "      # TODO: fill the reducer code"
+        "        # Sum up the counts for each palindrome\n",
+        "        yield (word, sum(counts))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "h39JRTyibf_1",
-        "outputId": "a65f94ff-f683-4eac-d30f-c71a82944d38"
+        "outputId": "340962c1-a591-40e9-fd2f-43e892d69af4"
       },
       "outputs": [
         {
-          "name": "stderr",
           "output_type": "stream",
+          "name": "stderr",
           "text": [
             "WARNING:mrjob.conf:No configs specified for inline runner\n"
           ]
         },
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "level 2\n",
-            "noon 2\n",
-            "racecar 2\n",
-            "radar 2\n",
             "rotor 3\n",
             "stats 1\n",
             "tenet 5\n",
             "civic 1\n",
             "deed 2\n",
-            "kayak 6\n"
+            "kayak 6\n",
+            "level 2\n",
+            "noon 2\n",
+            "racecar 2\n",
+            "radar 2\n"
           ]
         }
       ],
@@ -364,6 +380,15 @@
         "mr_job = palindrome.MRPalindrome(args=['palindrome_words.txt'])\n",
         "run_mr_job(mr_job)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "w63exWpIGuMP"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
