--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -60,10 +60,10 @@
       "execution_count": 1,
       "metadata": {
         "id": "NorJyn84zacp",
-        "outputId": "f55b91fd-712b-4d20-dae4-b66d1f8d9c49",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "f55b91fd-712b-4d20-dae4-b66d1f8d9c49"
       },
       "outputs": [
         {
@@ -250,11 +250,11 @@
         "data['sales']['bson_dataset'] = load_txt_to_bson(data['sales']['dataset'])"
       ],
       "metadata": {
-        "id": "cqBRH0Ly4RCJ",
-        "outputId": "718f2f1c-b106-4dce-ac5a-2cc6f82010ec",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cqBRH0Ly4RCJ",
+        "outputId": "718f2f1c-b106-4dce-ac5a-2cc6f82010ec"
       },
       "execution_count": 12,
       "outputs": [
@@ -281,11 +281,11 @@
         "collection['sales'].insert_many(data['sales']['bson_dataset'])"
       ],
       "metadata": {
-        "id": "MUN5VtCg5blj",
-        "outputId": "5ab99d04-0aaa-4ff7-e207-c528cc49073b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MUN5VtCg5blj",
+        "outputId": "5ab99d04-0aaa-4ff7-e207-c528cc49073b"
       },
       "execution_count": 14,
       "outputs": [
@@ -822,6 +822,58 @@
         "for doc in collection.aggregate(pipeline):\n",
         "    print(doc)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "pipeline = [\n",
+        "    {\n",
+        "        '$group': {\n",
+        "            '_id': '$storeLocation',\n",
+        "            'min_satisfaction': {'$min': '$customer.satisfaction'},\n",
+        "            'max_satisfaction': {'$max': '$customer.satisfaction'},\n",
+        "            'avg_satisfaction': {'$avg': '$customer.satisfaction'}\n",
+        "        }\n",
+        "    },\n",
+        "    {\n",
+        "        '$sort': {'_id': 1}\n",
+        "    }\n",
+        "]\n",
+        "\n",
+        "for doc in collection.aggregate(pipeline):\n",
+        "    print(doc)\n"
+      ],
+      "metadata": {
+        "id": "_qtyLpS06Psp",
+        "outputId": "b3bb2c50-539e-40af-ce6a-5d319cf9e906",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 193
+        }
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "AttributeError",
+          "evalue": "'dict' object has no attribute 'aggregate'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-15-edeb1e726725>\u001b[0m in \u001b[0;36m<cell line: 15>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m ]\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mdoc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcollection\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maggregate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpipeline\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdoc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mAttributeError\u001b[0m: 'dict' object has no attribute 'aggregate'"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "DjK1W_js6RR7"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
