--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -369,12 +369,12 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "LLgjvaEkEFqC",
-        "outputId": "eed69732-20f9-4646-c098-c57b6b95ff22",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 159
-        }
+        },
+        "id": "LLgjvaEkEFqC",
+        "outputId": "eed69732-20f9-4646-c098-c57b6b95ff22"
       },
       "execution_count": 17,
       "outputs": [
@@ -826,6 +826,8 @@
         "    # fill the pipeline\n",
         "    #first deconstruct the items field\n",
         "    {\"$unwind\": \"$items\"},\n",
+        "    #group with id, strore location(we take the first store location since all the unwinded documents have the same st. location)\n",
+        "    # and sum the quantity\n",
         "    {\"$group\": {\"_id\": \"$_id\", \"storeLocation\": {\"$first\": \"$storeLocation\"}, \"total_quantity\": {\"$sum\": \"$items.quantity\"}}},\n",
         "\n",
         "    # then use the match operator to retrive the total quantity greater than ($gt) 55\n",
@@ -841,18 +843,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 71,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "9C5Xkx_CZ_ZZ",
-        "outputId": "cbad6421-223f-4114-f95d-485ce2a30358"
+        "outputId": "f2addd1a-a2f9-493a-8cc9-4898bcd8eb2a"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "{'_id': 'Austin', 'min_satisfaction': 1, 'max_satisfaction': 5, 'avg_satisfaction': 3.7677514792899407}\n",
             "{'_id': 'Denver', 'min_satisfaction': 1, 'max_satisfaction': 5, 'avg_satisfaction': 3.7998708844415754}\n",
@@ -869,53 +871,15 @@
         "\n",
         "pipeline = [\n",
         "    # fill the pipeline\n",
+        "\n",
+        "    {\"$group\": {\"_id\": \"$storeLocation\", \"min_satisfaction\": {\"$min\": \"$customer.satisfaction\"}, \"max_satisfaction\": {\"$max\": \"$customer.satisfaction\"}, \"avg_satisfaction\": {\"$avg\": \"$customer.satisfaction\"}}},\n",
+        "    {\"$sort\": {\"_id\": 1}}\n",
+        "\n",
+        "\n",
         "]\n",
         "\n",
-        "for doc in collection.aggregate(pipeline):\n",
+        "for doc in collection['sales'].aggregate(pipeline):\n",
         "    print(doc)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "pipeline = [\n",
-        "    {\n",
-        "        '$group': {\n",
-        "            '_id': '$storeLocation',\n",
-        "            'min_satisfaction': {'$min': '$customer.satisfaction'},\n",
-        "            'max_satisfaction': {'$max': '$customer.satisfaction'},\n",
-        "            'avg_satisfaction': {'$avg': '$customer.satisfaction'}\n",
-        "        }\n",
-        "    },\n",
-        "    {\n",
-        "        '$sort': {'_id': 1}\n",
-        "    }\n",
-        "]\n",
-        "\n",
-        "for doc in collection.aggregate(pipeline):\n",
-        "    print(doc)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 193
-        },
-        "id": "_qtyLpS06Psp",
-        "outputId": "b3bb2c50-539e-40af-ce6a-5d319cf9e906"
-      },
-      "execution_count": 15,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "'dict' object has no attribute 'aggregate'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-15-edeb1e726725>\u001b[0m in \u001b[0;36m<cell line: 15>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     13\u001b[0m ]\n\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 15\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mdoc\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mcollection\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0maggregate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpipeline\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     16\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdoc\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mAttributeError\u001b[0m: 'dict' object has no attribute 'aggregate'"
-          ]
-        }
       ]
     },
     {
@@ -929,22 +893,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 75,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "gxah0DqSJ1vc",
-        "outputId": "06ee1fde-5c5a-49cf-a5a2-07390de72ec8"
+        "outputId": "baf42882-5f84-4e0f-f8b4-64a323f66e0c"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "{'classification': 'High Value', 'num_of_orders': 1478}\n",
-            "{'classification': 'Low Value', 'num_of_orders': 2741}\n",
-            "{'classification': 'Medium Value', 'num_of_orders': 781}\n"
+            "{'_id': 'Medium Value', 'count': 781}\n",
+            "{'_id': 'Low Value', 'count': 2741}\n",
+            "{'_id': 'High Value', 'count': 1478}\n"
           ]
         }
       ],
@@ -955,12 +919,36 @@
         "# Note: this task is the most challenging one in this assignment.\n",
         "\n",
         "pipeline = [\n",
-        "    # fill the pipeline\n",
+        "        # fill the pipeline\n",
+        "        {\"$addFields\": {\"total_price\": {\"$sum\": \"$items.price\"}}},\n",
+        "        {\"$group\": {\n",
+        "        \"_id\": {\"$cond\": [\n",
+        "                {\"$gt\": [\"$total_price\", 1000]},\"High Value\",\n",
+        "\n",
+        "              {\"$cond\": [\n",
+        "                  {\"$and\": [{\"$gt\": [\"$total_price\", 500]}, {\"$lte\": [\"$total_price\", 1000]}]}, \"Medium Value\",\n",
+        "\n",
+        "                    \"Low Value\"\n",
+        "                ]}\n",
+        "            ]\n",
+        "        },\n",
+        "        \"count\": {\"$sum\": 1}\n",
+        "    }}\n",
+        "\n",
         "]\n",
         "\n",
-        "for doc in collection.aggregate(pipeline):\n",
+        "for doc in collection['sales'].aggregate(pipeline):\n",
         "    print(doc)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "7jlBoJYe7HW9"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
