--- a/Assignment1.ipynb
+++ b/Assignment1.ipynb
@@ -881,22 +881,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 38,
+      "execution_count": 41,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "gxah0DqSJ1vc",
-        "outputId": "30d1468a-fb8e-4029-eb4e-33982ab0004e"
+        "outputId": "a1437be7-c2d5-475a-b4ee-9a84d17c146e"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'classification': 'High Value', 'num_of_orders': 1478}\n",
+            "{'classification': 'Low Value', 'num_of_orders': 2741}\n",
             "{'classification': 'Medium Value', 'num_of_orders': 781}\n",
-            "{'classification': 'Low Value', 'num_of_orders': 2741}\n"
+            "{'classification': 'High Value', 'num_of_orders': 1478}\n"
           ]
         }
       ],
@@ -908,16 +908,27 @@
         "\n",
         "pipeline = [\n",
         "        # fill the pipeline\n",
+        "        # This field is the sum of all prices in the 'items' array\n",
         "        {\"$addFields\": {\"total_price\": {\"$sum\": \"$items.price\"}}},\n",
-        "        {\"$group\": {\n",
-        "        \"_id\": {\"$cond\": [{\"$gt\": [\"$total_price\", 1000]},\"High Value\",\n",
         "\n",
-        "              {\"$cond\": [{\"$and\": [{\"$gt\": [\"$total_price\", 500]}, {\"$lte\": [\"$total_price\", 1000]}]}, \"Medium Value\",\n",
-        "\n",
-        "                    \"Low Value\"\n",
+        "    # Group the documents for aggregation\n",
+        "    {\"$group\": {\n",
+        "        # The '_id' field here represents the group key for aggregation\n",
+        "        # It's set based on the value of 'total_price' using conditional logic\n",
+        "        \"_id\": {\n",
+        "            # First condition: if 'total_price' is greater than 1000, classify as \"High Value\"\n",
+        "            \"$cond\": [{\"$gt\": [\"$total_price\", 1000]}, \"High Value\",\n",
+        "                # Nested condition: if 'total_price' is between 500 and 1000, classify as \"Medium Value\"\n",
+        "                {\"$cond\": [\n",
+        "                    {\"$and\": [\n",
+        "                        {\"$gt\": [\"$total_price\", 500]},   # Greater than 500\n",
+        "                        {\"$lte\": [\"$total_price\", 1000]}  # Less than or equal to 1000\n",
+        "                    ]}, \"Medium Value\", # if the above contition are meet clasifiy this category as medium value\n",
+        "                    \"Low Value\" # Default condition - if none of the above conditions are met, classify as \"Low Value\"\n",
         "                ]}\n",
         "            ]\n",
         "        },\n",
+        "        # Count the number of documents in each group\n",
         "        \"count\": {\"$sum\": 1}\n",
         "    }},\n",
         "# change the name \"_id\" to \"classification\" and \"count\" to \"num_of_orders\" in the same pipeline\n",
