--- a/Lab8.ipynb
+++ b/Lab8.ipynb
@@ -27,31 +27,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "jYsNp7LUR8Xx",
-        "outputId": "1e0f013b-d780-4244-c2e0-43e1341d9596"
+        "outputId": "b0c59fa8-3481-47bb-8fda-1b4b3640d2f9"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting pyspark==3.2.0\n",
             "  Downloading pyspark-3.2.0.tar.gz (281.3 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m281.3/281.3 MB\u001b[0m \u001b[31m4.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m281.3/281.3 MB\u001b[0m \u001b[31m2.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "Collecting py4j==0.10.9.2\n",
+            "Collecting py4j==0.10.9.2 (from pyspark==3.2.0)\n",
             "  Downloading py4j-0.10.9.2-py2.py3-none-any.whl (198 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m198.8/198.8 KB\u001b[0m \u001b[31m17.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m198.8/198.8 kB\u001b[0m \u001b[31m5.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hBuilding wheels for collected packages: pyspark\n",
             "  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pyspark: filename=pyspark-3.2.0-py2.py3-none-any.whl size=281805917 sha256=3e3f84050d80d0fd7da362e5e1ddd094a65402ca1b0f1ee7e157b58a5fb724e7\n",
-            "  Stored in directory: /root/.cache/pip/wheels/2f/f8/95/2ad14a4614b4a9f645ee928fbbd057b1b254c67adb494c9a58\n",
+            "  Created wheel for pyspark: filename=pyspark-3.2.0-py2.py3-none-any.whl size=281805894 sha256=9b304f40f3f37b249c2ab788dd708354902e1447b23328b81d9b96478bb180cd\n",
+            "  Stored in directory: /root/.cache/pip/wheels/32/97/d3/8b6d964c8700e4fbb561c71638a92ec55dac9be51eb5fea86d\n",
             "Successfully built pyspark\n",
             "Installing collected packages: py4j, pyspark\n",
             "  Attempting uninstall: py4j\n",
@@ -82,7 +81,7 @@
       "metadata": {
         "id": "FYBODHIdSOzy"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -123,9 +122,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "as2BSbVGS1kB",
-        "outputId": "c7f775d9-01ff-4686-858b-5d7607cf11f9"
+        "outputId": "5c233701-c7e2-497f-d1ea-0b6bbcc25e8b"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -179,9 +178,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZLRgZoLKxmqS",
-        "outputId": "568ea7a1-ed6a-45a6-ab49-4ed32735b7b5"
+        "outputId": "b11030f1-5e05-448d-c18a-9fcbee2613ed"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -216,35 +215,38 @@
         "    (5, \"DSC532,DSC550,etc...\"),\n",
         "], [\"id\", \"sentence\"])\n",
         "\n",
-        "countTokens =\n",
+        "countTokens = udf(lambda words: len(words), IntegerType())\n",
         "\n",
-        "regexTokenizer =\n",
+        "regexTokenizer = RegexTokenizer(inputCol=\"sentence\", outputCol=\"words\", pattern=\"\\\\W\")\n",
         "\n",
-        "regexTokenized =\n"
+        "regexTokenized = regexTokenizer.transform(sentenceDataFrame)\n",
+        "\n",
+        "regexTokenized.withColumn(\"tokens\", countTokens(col(\"words\"))).show(truncate=False)\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "nz0yTpH7w9pP",
-        "outputId": "c9712b04-ea1b-4a7f-c2a0-e3c882f743d4"
+        "outputId": "4c459b4e-8bdc-4343-92ee-72200f66d2e5"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+-----------------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------+------+\n",
-            "|sentence                                                                                                   |words                                                                                                                |tokens|\n",
-            "+-----------------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------+------+\n",
-            "|%Introduction to Text Analytics Using Apache Spark%                                                        |[introduction, to, text, analytics, using, apache, spark]                                                            |7     |\n",
-            "|Big Data Analytics (DSC511) is a Data Science Course!                                                      |[big, data, analytics, dsc511, is, a, data, science, course]                                                         |9     |\n",
-            "|Today, students will learn how to apply cleaning, tokenization, stemming and lemmatization on text / words.|[today, students, will, learn, how, to, apply, cleaning, tokenization, stemming, and, lemmatization, on, text, words]|15    |\n",
-            "|Other courses under the Data Science Master (DSc) at the University of Cyprus might be...                  |[other, courses, under, the, data, science, master, dsc, at, the, university, of, cyprus, might, be]                 |15    |\n",
-            "|DSC510, DSC530, DSC531,                                                                                    |[dsc510, dsc530, dsc531]                                                                                             |3     |\n",
-            "|DSC532,DSC550,etc...                                                                                       |[dsc532, dsc550, etc]                                                                                                |3     |\n",
-            "+-----------------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------+------+\n",
+            "+---+-----------------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------+------+\n",
+            "|id |sentence                                                                                                   |words                                                                                                                |tokens|\n",
+            "+---+-----------------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------+------+\n",
+            "|0  |%Introduction to Text Analytics Using Apache Spark%                                                        |[introduction, to, text, analytics, using, apache, spark]                                                            |7     |\n",
+            "|1  |Big Data Analytics (DSC511) is a Data Science Course!                                                      |[big, data, analytics, dsc511, is, a, data, science, course]                                                         |9     |\n",
+            "|2  |Today, students will learn how to apply cleaning, tokenization, stemming and lemmatization on text / words.|[today, students, will, learn, how, to, apply, cleaning, tokenization, stemming, and, lemmatization, on, text, words]|15    |\n",
+            "|3  |Other courses under the Data Science Master (DSc) at the University of Cyprus might be...                  |[other, courses, under, the, data, science, master, dsc, at, the, university, of, cyprus, might, be]                 |15    |\n",
+            "|4  |DSC510, DSC530, DSC531,                                                                                    |[dsc510, dsc530, dsc531]                                                                                             |3     |\n",
+            "|5  |DSC532,DSC550,etc...                                                                                       |[dsc532, dsc550, etc]                                                                                                |3     |\n",
+            "+---+-----------------------------------------------------------------------------------------------------------+---------------------------------------------------------------------------------------------------------------------+------+\n",
             "\n"
           ]
         }
@@ -283,9 +285,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x9ysMXi8qppg",
-        "outputId": "5e8c9ba0-83d0-4de9-c7c5-b0da58ce0002"
+        "outputId": "470e40eb-5e05-431c-ee17-7fbfafb5006d"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -324,16 +326,25 @@
       "cell_type": "code",
       "source": [
         "#@title TODO: Tokenize clean_text_df with the default tokenizer\n",
-        "tokenized ="
+        "tokenized = tokenizer.transform(clean_text_df)\n",
+        "\n",
+        "countTokens = udf(lambda words: len(words), IntegerType())\n",
+        "\n",
+        "# tokenized.withColumn(\"tokens\", countTokens(col(\"words\"))).show(truncate=False)\n",
+        "\n",
+        "\n",
+        "tokenized.select(\"sentence\", \"words\").withColumn(\"tokens\", countTokens(col(\"words\"))).show(truncate=False)\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZbqEoCVuyMpT",
-        "outputId": "549f5bc8-3601-4010-ab87-b1b5b953fb22"
+        "outputId": "26271c17-bed3-4935-cd05-10653d38b56f"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -378,9 +389,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VWZRrtHDzq3T",
-        "outputId": "fb385ce6-9dfb-4a98-c81d-0bbcba324962"
+        "outputId": "ffd2f5c6-c8b0-4f5e-902c-dfd7afb0dcaa"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -443,21 +454,22 @@
         "  return [stemmer.stem(w) for w in x]\n",
         "\n",
         "# TODO: Create user defined function for stemming with return type Array<String>\n",
-        "stemmer_udf =\n",
+        "stemmer_udf = udf(stemming, ArrayType(StringType()))\n",
         "\n",
         "# TODO: Create new df with vectors containing the stemmed tokens with column name \"stemmed\"\n",
-        "vector_stemmed_df =\n",
+        "vector_stemmed_df = vector_no_stopw_df.withColumn(\"stemmed\", stemmer_udf(col(\"filtered\")))\n",
         "\n",
-        "# TODO: Display only the columns \"filtered\" and \"stemmed\"\n"
+        "# TODO: Display only the columns \"filtered\" and \"stemmed\"\n",
+        "vector_stemmed_df.select(\"filtered\", \"stemmed\").show(truncate=False)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "m8mLBOyW0yJg",
-        "outputId": "ac8c3e0e-9923-48ac-ab1e-bba36a72a70d"
+        "outputId": "40ab2ebf-2564-483f-f51e-1929ae074c79"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -501,9 +513,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "u5ym36ZYvhQU",
-        "outputId": "9b7d7495-405e-414f-963a-5c1ef57c9155"
+        "outputId": "fe7636d6-ec68-4406-e027-d0354626c5b8"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -520,7 +532,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 48
+          "execution_count": 20
         }
       ]
     },
@@ -538,21 +550,22 @@
         "  return [lemmatizer.lemmatize(w) for w in x]\n",
         "\n",
         "# TODO: Create user defined function for lemmatizing with return type Array<String>\n",
-        "lemmer_udf =\n",
+        "lemmer_udf = udf(lem, ArrayType(StringType()))\n",
         "\n",
         "# TODO: Create new df with vectors containing the lemmatized tokens with column name \"lemmatized\"\n",
-        "vector_stem_lem_df =\n",
+        "vector_stem_lem_df = vector_stemmed_df.withColumn(\"lemmatized\", lemmer_udf(col(\"filtered\")))\n",
         "\n",
-        "# TODO: Display only the columns \"filtered\", \"stemmed\" and \"lemmatized\"\n"
+        "# TODO: Display only the columns \"filtered\", \"stemmed\" and \"lemmatized\"\n",
+        "vector_stem_lem_df.select(\"filtered\", \"stemmed\", \"lemmatized\").show(truncate=False)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "jowlIYg-17vC",
-        "outputId": "3625bed0-981a-4e26-e3f2-0d27c14b2060"
+        "outputId": "9a94830d-9c16-49c7-c682-8684819a1b02"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -600,24 +613,26 @@
         "\"\"\"\n",
         "Basically, here we take unigrams (1-gram sequence) and convert it into a bigram (2-gram sequence)\n",
         "\"\"\"\n",
-        "ngram =\n",
+        "ngram = NGram(n=2, inputCol=\"words\", outputCol=\"ngrams\")\n",
         "\n",
         "# TODO: Create ngram_df where you will transform our previous df using NGram tranformer\n",
-        "ngram_df =\n",
+        "# udf = udf(lambda row: row, StringType())\n",
+        "ngram_df = ngram.transform(vector_stem_lem_df)\n",
         "\n",
         "# TODO: Filter out empty ngrams\n",
-        "ngram_df =\n",
+        "ngram_df = ngram_df.where(size(col(\"ngrams\")) > 1)\n",
         "\n",
-        "# TODO: print df\n"
+        "# TODO: print df only words and ngrams\n",
+        "ngram_df.select(\"words\", \"ngrams\").show(truncate=False)\n"
       ],
       "metadata": {
         "id": "3xSrP9_SDkwd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "a7d2b4e9-ad41-4c34-a351-dbc65060a87b"
+        "outputId": "ef9fa02c-59c6-47b2-bd95-ffef27221802"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
